--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.datasource.password= k123
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+#email
+mail.username=yourEmail@gmail.com
+email.password=yourPass
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.ssl.enable=false
+
+home.url=http://localhost:8080/
+
